# rpo-spec-v0.1

./: CITATION.cff  CNAME  CONTRIBUTING.md  README-dev.md  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/legal_lab_api/: __init__.py  app.py  config.py  jobs.py  pipeline.py  truthx.py
backend/tests/: test_pipeline.py
docs/: advanced-cockpit.html  architecture.md  cockpit.html  contexts.html  demo-ai-governance.html  demo-asterion-case.html  demo-cnrs-legal-mvp.html  demo-legal-mapping.html  demo-legal.html  demo-psycho.html  examples.html  gersende-de-parcey.html  how-it-works.html  index.html  index.md  legal-evidence-lab-deployment.md  overview.htlm  overview.html  overview.md  playground.html  sandbox.html  simulator-crisis.html  simulator-signal.html  simulator.html  site.webmanifest  spec.html  tests.html  why_openproof.md
docs/assets/: contexts.js  openproof-v2.css  openproof-v2.js  sandbox.js  signal-engine.js  site.css  site.js
docs/legal/: index.html
docs/profiles/: README.md  cnrs-legal-mvp.md  institutional-crisis.md  legal-proceedings.md
examples/ example-minimal/: rpo.json
examples/cnrs-legal-mvp/: README.md  expected-rpo.json  student-output.json
examples/cnrs-legal-mvp/benchmark/: scores.json
examples/cnrs-legal-mvp/reference/: pipeline_to_rpo.py
examples/example-minimal/: README.md  rpo.json  rpo.pdf.txt
spec/: rpo-architecture.md  rpo-format.md  rpo-schema.json
tests/: hash-integrity.test.js  pdf-output.test.js  schema-validation.test.js
