[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openproof-legal-evidence-api"
version = "0.1.0"
description = "Bounded, queue-backed API boundary for OpenProof Legal Evidence Lab."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
ocr = [
  "Pillow>=10,<12",
  "pypdf>=5,<6",
  "pytesseract>=0.3.13,<1",
]
test = ["pytest>=8,<9", "httpx>=0.27,<1"]

[project.scripts]
openproof-legal-api = "legal_lab_api.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
